# IoT

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig
main/: CMakeLists.txt  main.c
main/ble/: ble_gatt_server.c  ble_gatt_server.h
main/bmp280/: bmp280.c  bmp280.h
main/mq2/: mq2.c  mq2.h
main/mqtt/: mqtt_manager.c  mqtt_manager.h  old_mqtt.c
main/nvs/: nvs_manager.c  nvs_manager.h
main/wifi/: wifi_manager.c  wifi_manager.h
